#PK-593 Create Topbar Settings page

--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/AddWebsiteSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/AddWebsiteSettings.razor
@@ -16,7 +16,7 @@
 @using Kooco.Pikachu.WebsiteManagement
 @using Volo.Abp.AspNetCore.Components.Notifications
 @using Volo.Abp.AspNetCore.Components.Web
-@attribute [Authorize(PikachuPermissions.WebsiteSettings.Create)]
+@attribute [Authorize(PikachuPermissions.WebsiteManagement.WebsiteSettings.Create)]
 @inherits PikachuComponentBase
 @inject IWebsiteSettingsAppService WebsiteSettingsAppService
 @inject NavigationManager NavigationManager
