--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/WebsiteSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/WebsiteSettings.razor
@@ -5,7 +5,7 @@
 @using Kooco.Pikachu.WebsiteManagement
 @using Volo.Abp.AspNetCore.Components.Notifications
 @using Volo.Abp.AspNetCore.Components.Web
-@attribute [Authorize(PikachuPermissions.WebsiteSettings.Default)]
+@attribute [Authorize(PikachuPermissions.WebsiteManagement.WebsiteSettings.Default)]
 @inherits PikachuComponentBase
 @inject IWebsiteSettingsAppService WebsiteSettingsAppService
 @inject NavigationManager NavigationManager
