--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -502,3 +502,42 @@
 .color-scheme > .b-input-color-picker-preview {
     height: 9.55rem;
 }
+
+.collapse-arrow-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Center on screen vertically */
+}
+
+.collapse-arrow {
+    position: relative;
+    width: 2px;
+    height: 50px;
+    background-color: black;
+}
+
+    .collapse-arrow::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        right: -5px;
+        transform: translateY(-50%);
+        border: solid black;
+        border-width: 2px 2px 0 0;
+        display: inline-block;
+        padding: 5px;
+        transform: translateY(-50%) rotate(45deg);
+    }
+
+.drag-drop-span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    max-height: 55px !important;
+}
+
+    .drag-drop-span i {
+        cursor: pointer;
+    }
