--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantCustomerService.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantCustomerService.razor
@@ -8,14 +8,17 @@
         <Card>
             <CardBody>
                 <Row>
-                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                        <h4>@L["CustomerServiceInformation"]</h4>
-                    </Column>
-                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
+                    @if (!ViewMode)
+                    {
+                        <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
+                            <h4>@L["CustomerServiceInformation"]</h4>
+                        </Column>
+                    }
+                    <Column ColumnSize="ViewMode ? ColumnSize.Is12 : ColumnSize.Is12.Is9.OnDesktop">
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
                                 <FieldLabel>@L["CompanyName"]<Span> *</Span></FieldLabel>
-                                <TextEdit @bind-Text="Entity.CompanyName">
+                                <TextEdit @bind-Text="Entity.CompanyName" Disabled="ViewMode">
                                     <Feedback>
                                         <ValidationError />
                                     </Feedback>
@@ -25,7 +28,7 @@
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
                                 <FieldLabel>@L["BusinessRegistrationNumber"]<Span> *</Span></FieldLabel>
-                                <TextEdit @bind-Text="Entity.BusinessRegistrationNumber">
+                                <TextEdit @bind-Text="Entity.BusinessRegistrationNumber" Disabled="ViewMode">
                                     <Feedback>
                                         <ValidationError />
                                     </Feedback>
@@ -35,7 +38,7 @@
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
                                 <FieldLabel>@L["CustomerServiceEmail"]<Span> *</Span></FieldLabel>
-                                <TextEdit @bind-Text="Entity.CustomerServiceEmail">
+                                <TextEdit @bind-Text="Entity.CustomerServiceEmail" Disabled="ViewMode">
                                     <Feedback>
                                         <ValidationError />
                                     </Feedback>
@@ -45,7 +48,7 @@
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
                                 <FieldLabel>@L["CustomerServiceContactPhone"]<Span> *</Span></FieldLabel>
-                                <TextEdit @bind-Text="Entity.CustomerServiceContactPhone">
+                                <TextEdit @bind-Text="Entity.CustomerServiceContactPhone" Disabled="ViewMode">
                                     <Feedback>
                                         <ValidationError />
                                     </Feedback>
@@ -56,16 +59,21 @@
                 </Row>
                 <Divider></Divider>
                 <Row>
-                    <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
-                        <h4>@L["ServiceHours"]</h4>
-                    </Column>
-                    <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
+                    @if (!ViewMode)
+                    {
+                        <Column ColumnSize="ColumnSize.Is12.Is3.OnDesktop">
+                            <h4>@L["ServiceHours"]</h4>
+                        </Column>
+                    }
+                    
+                    <Column ColumnSize="ViewMode ? ColumnSize.Is12 : ColumnSize.Is12.Is9.OnDesktop">
                         <Row>
+                            <h4>@L["ServiceHours"]</h4>
                             <Column ColumnSize="ColumnSize.Is12.Is6.OnDesktop">
                                 <Validation MessageLocalizer="@LH.Localize">
                                     <Field>
                                         <FieldLabel>@L["From"]<Span> *</Span></FieldLabel>
-                                        <TimeEdit TValue="DateTime?" @bind-Time="Entity.ServiceHoursFrom">
+                                        <TimeEdit TValue="DateTime?" @bind-Time="Entity.ServiceHoursFrom" Disabled="ViewMode">
                                             <Feedback>
                                                 <ValidationError />
                                             </Feedback>
@@ -77,7 +85,7 @@
                                 <Validation MessageLocalizer="@LH.Localize">
                                     <Field>
                                         <FieldLabel>@L["To"]<Span> *</Span></FieldLabel>
-                                        <TimeEdit TValue="DateTime?" @bind-Time="Entity.ServiceHoursTo">
+                                        <TimeEdit TValue="DateTime?" @bind-Time="Entity.ServiceHoursTo" Disabled="ViewMode">
                                             <Feedback>
                                                 <ValidationError />
                                             </Feedback>
@@ -92,12 +100,15 @@
         </Card>
     </Validations>
 
-    <Div Class="text-end">
-        <PikachuButton Class="pk-btn-transparent" Disabled="IsLoading" Loading="IsCancelling" Clicked="CancelAsync">
-            @L["Cancel"]
-        </PikachuButton>
-        <PikachuButton Class="pk-btn-primary" Disabled="IsCancelling" Loading="IsLoading" Clicked="UpdateAsync">
-            @L["Update"]
-        </PikachuButton>
-    </Div>
+    @if (!ViewMode)
+    {
+        <Div Class="text-end">
+            <PikachuButton Class="pk-btn-transparent" Disabled="IsLoading" Loading="IsCancelling" Clicked="CancelAsync">
+                @L["Cancel"]
+            </PikachuButton>
+            <PikachuButton Class="pk-btn-primary" Disabled="IsCancelling" Loading="IsLoading" Clicked="UpdateAsync">
+                @L["Update"]
+            </PikachuButton>
+        </Div>
+    }
 </Form>
