#PK-789, #PK-593 Updates

--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/TopbarSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/TopbarSettings.razor
@@ -41,7 +41,7 @@
                     <Field>
                         <Select TValue="TopbarLinkSettings?" SelectedValue="SelectedLinkSettings"
                                 SelectedValueChanged="OnLinkSettingsSelected">
-                            <SelectItem Value="(TopbarLinkSettings?)null"></SelectItem>
+                            <SelectItem Value="(TopbarLinkSettings?)null">@L["SelectModule"]</SelectItem>
                             @foreach (TopbarLinkSettings linkSettings in Enum.GetValues(typeof(TopbarLinkSettings)))
                             {
                                 <SelectItem Value="linkSettings">@L["Enum:TopbarLinkSettings." + (int)linkSettings]</SelectItem>
